--- a/ChallengeApp/res/values/strings.xml
+++ b/ChallengeApp/res/values/strings.xml
@@ -40,4 +40,5 @@
 	    <string name="textChallengeCategory">Category</string>
 	    <string name="textChallengePrivacy">Privacy</string>
 	    <string name="challengeList">Challenge List</string>
+	    <string name="name">Challenge Name</string>
 </resources>
