--- a/ChallengeApp/res/values/strings.xml
+++ b/ChallengeApp/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Challenge App</string>
-    <string name="action_settings">Settings</string>
+    <string name="logout">Logout</string>
     <string name="createAChallenge">Create A Challenge</string>
     <string name="challengeName">Name</string>
     <string name="challengeDescription">Description</string>
@@ -10,7 +10,7 @@
     <string name="challengePrivacy">Privacy</string>
 	<string name="createChallengeButton">Create Challenge</string>
     <string name="login">Login</string>
-    <string name="username">email address</string>
+    <string name="username">username</string>
     <string name="password">password</string>
     <string name="loginButton">Login</string>
     <string name="textChallengeName">Challenge Name</string>
@@ -25,4 +25,5 @@
     <string name="myChallengeTitle">My Challenges</string>
     <string name="myFriendsChallengesTitle">My Friends Challenges</string>
     <string name="allChallengesTitle">All Challenges</string>
+    <string name="logoutOfApp">logoutButton</string>
 </resources>
